--- a/index.html
+++ b/index.html
@@ -6,23 +6,33 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <title>ROAR Properties</title>
-    <meta name="description" content="Premium Real Estate Platform" />
+
+    <title>ROAR Properties | Luxury Real Estate in Dubai</title>
+    <meta name="description" content="Discover luxury real estate in Dubai with ROAR Properties. Find the best villas, apartments, penthouses, and premium properties tailored to your lifestyle." />
+    <meta name="keywords" content="Dubai real estate, luxury properties Dubai, buy villa in Dubai, penthouse Dubai, property investment Dubai, best property in Dubai, ROAR Realty" />
     <meta name="author" content="ROAR Properties" />
 
-    <meta property="og:title" content="roar realty" />
-    <meta property="og:description" content="roar realty" />
+    <!-- Open Graph (SEO for social media) -->
+    <meta property="og:title" content="ROAR Properties - Luxury Real Estate in Dubai" />
+    <meta property="og:description" content="Explore premium villas, apartments, and penthouses in Dubai with ROAR Properties." />
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://roarproperties.com" />
     <meta property="og:image" content="/picture/b68e1004-3524-4218-a5a3-2034f635c571.png" />
 
+    <!-- Twitter SEO -->
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="ROAR Properties | Luxury Homes in Dubai" />
+    <meta name="twitter:description" content="Dubai’s most exclusive villas, penthouses, and apartments at ROAR Properties." />
     <meta name="twitter:image" content="/picture/b68e1004-3524-4218-a5a3-2034f635c571.png" />
-    
+
+    <!-- Favicon -->
     <link rel="icon" href="/picture/b68e1004-3524-4218-a5a3-2034f635c571.png" type="image/png">
   </head>
 
   <body>
+
     <div id="root"></div>
+
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
